# shapes

./: CMakeLists.txt  CMakeLists_ORIG.txt  README.md  build.sh  clean.sh  main_shapes.cpp  run.sh
assets/: color_black.tga  leather_disp.tif  scene_bump.txt  scene_displace.txt  scene_psys.txt  scene_scatter.txt  scene_simple.txt  unitree_g1.gltf
data/: color_gray.tga  scene_bump.txt  scene_displace.txt  scene_psys.txt  scene_simple.txt
shaders/: common.glsl  shade_bump.frag.glsl  shade_bump.vert.glsl  shade_env.frag.glsl  shade_env.vert.glsl  shade_mesh.frag.glsl  shade_mesh.vert.glsl  shade_mesh_depth.frag.glsl  shade_mesh_depth.vert.glsl  shade_pick.frag.glsl  shade_pick.vert.glsl  shade_pnts.frag.glsl  shade_pnts.vert.glsl  shade_pnts_depth.frag.glsl  shade_pnts_depth.vert.glsl  shade_proxy.frag.glsl  shade_proxy.vert.glsl  shade_terrain.frag.glsl  shade_terrain.vert.glsl  shade_translucent.frag.glsl  shade_translucent.vert.glsl
src/assets/: camera.h  curve.cpp  mesh.cpp  params.h  points.cpp
src/behaviors/: character.cpp  character.h  deform.cpp  deform.h  displace.cpp  displace.h  globals.cpp  globals.h  heightfield.cpp  heightfield.h  instance.cpp  instance.h  lightset.cpp  lightset.h  loft.cpp  loft.h  module.cpp  module.h  motioncycles.cpp  motioncycles.h  muscles.cpp  muscles.h  parts.cpp  parts.h  point_base.cpp  point_base.h  point_psys.cpp  point_psys.h  scatter.cpp  scatter.h  transform.cpp  transform.h  wang_tiles.cpp  wang_tiles.h
src/core/: object.cpp  object.h  object_list.cpp  object_list.h  scene.cpp  scene.h  set.cpp  set.h
src/kernels/: fluid.h  points.cu  points.cuh
src/prims/: camera.cpp  camera.h  curve.cpp  curve.h  image.cpp  image.h  material.cpp  material.h  mesh.cpp  mesh.h  params.cpp  params.h  points.cpp  points.h  shader.cpp  shader.h  shapes.cpp  shapes.h  volume.cpp  volume.h
src/render/: render.cpp  render.h  render_base.cpp  render_base.h  render_gl.cpp  render_gl.h  render_optix.cpp  render_optix.h
